Update dependencies and enhance OutputAdaptorComponent for batch processing
- Upgrade Spring Boot version to 3.5.6 in build.gradle
- Add flush_interval configuration to config.yaml
- Refactor OutputAdaptorComponent to manage batch processing and scheduling
- Remove OutputAdapterProcedure as its functionality is integrated into OutputAdaptorComponent
- Improve error handling and logging in various components
- Enhance HttpInputAdapter to handle header parsing more robustly
- Update tests for HttpInputAdapter to reflect changes
- Add comprehensive development guide in claude.md